refactor: use single required job pattern with DAG dependencies
Implemented the 'all-checks-pass' pattern using re-actors/alls-green action.
This approach:
- Uses a single required status check 'All checks pass'
- Allows jobs to be genuinely skipped for docs-only changes
- Eliminates repetitive if conditions on every step
- Provides cleaner workflow with job-level conditions only
- Better GitHub UI experience showing skipped vs passed

Branch protection should be updated to only require 'All checks pass' status
instead of individual job statuses.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,46 +40,35 @@ jobs:
     name: macOS Integration Tests
     runs-on: macos-15-xlarge
     needs: detect-docs-only
+    if: needs.detect-docs-only.outputs.docs-only != 'true'
     steps:
       - uses: actions/checkout@v4
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
 
       - name: Install Rust
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
 
       - name: Setup Rust cache
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         uses: Swatinem/rust-cache@v2
         with:
           shared-key: ${{ runner.os }}
 
       - name: Install nextest
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         uses: taiki-e/install-action@nextest
         with:
           tool: nextest
 
       - name: Run all tests
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         run: cargo nextest run --profile ci
-
-      - name: Skip tests for docs-only changes
-        if: needs.detect-docs-only.outputs.docs-only == 'true'
-        run: echo "✅ Skipping macOS tests - only documentation changed"
 
   test-linux:
     name: Linux Tests
     runs-on: [self-hosted, linux]
     needs: detect-docs-only
+    if: needs.detect-docs-only.outputs.docs-only != 'true'
     steps:
-      - uses: actions/checkout@v4
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
-
       - name: Fix permissions from previous runs
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         run: |
           # Clean up any files left from previous sudo runs before checkout
           # Use GITHUB_WORKSPACE parent directory or current working directory
@@ -91,15 +80,15 @@ jobs:
           if [ -d /home/ci/.cargo ]; then
             sudo chown -R ci:ci /home/ci/.cargo || true
           fi
+          
+      - uses: actions/checkout@v4
 
       - name: Install Rust
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
 
       - name: Fix permissions on current directory
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         run: |
           # Clean up any files left from previous sudo runs
           if [ -d target ]; then
@@ -115,93 +104,74 @@ jobs:
           fi
 
       - name: Setup Rust cache
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         uses: Swatinem/rust-cache@v2
         with:
           shared-key: ${{ runner.os }}
 
       - name: Setup Rust environment
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         run: |
           source ~/.cargo/env
           rustup default stable
 
       - name: Install nextest
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         uses: taiki-e/install-action@nextest
         with:
           tool: nextest
 
       - name: Fix target directory permissions from previous runs
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         run: |
           if [ -d target ]; then
             sudo chown -R ci:ci target || true
           fi
 
       - name: Run all tests (non-root)
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         run: |
           source ~/.cargo/env
           cargo nextest run --profile ci --verbose -E 'not (binary(linux_integration) or binary(weak_integration))'
 
       - name: Install dependencies for weak mode (curl)
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         run: sudo apt-get update && sudo apt-get install -y curl
 
       - name: Run weak mode integration tests (Linux)
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         run: |
           source ~/.cargo/env
           cargo nextest run --profile ci --test weak_integration
 
       - name: Run Linux jail integration tests (sudo)
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         run: |
           source ~/.cargo/env
           # Run Linux-specific jail tests with sudo to satisfy root requirements
           sudo -E $(which cargo) nextest run --profile ci --test linux_integration --verbose
 
-      - name: Skip tests for docs-only changes
-        if: needs.detect-docs-only.outputs.docs-only == 'true'
-        run: echo "✅ Skipping Linux tests - only documentation changed"
-
   clippy:
     name: Clippy (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     needs: detect-docs-only
+    if: needs.detect-docs-only.outputs.docs-only != 'true'
     strategy:
       matrix:
         os: [ubuntu-latest-8-cores, macos-latest]
     steps:
       - uses: actions/checkout@v4
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
 
       - name: Install Rust
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
           components: clippy
 
       - name: Setup Rust cache
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         uses: Swatinem/rust-cache@v2
         with:
           shared-key: ${{ runner.os }}
 
       - name: Run clippy
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         run: cargo clippy --all-targets -- -D warnings
-
-      - name: Skip clippy for docs-only changes
-        if: needs.detect-docs-only.outputs.docs-only == 'true'
-        run: echo "✅ Skipping clippy on ${{ matrix.os }} - only documentation changed"
 
   fmt:
     name: Format
     runs-on: ubuntu-latest-8-cores
-
+    # Format always runs - even for docs changes we want consistent formatting
     steps:
       - uses: actions/checkout@v4
 
@@ -223,28 +193,24 @@ jobs:
     name: Unused dependency check
     runs-on: ubuntu-latest-8-cores
     needs: detect-docs-only
+    if: needs.detect-docs-only.outputs.docs-only != 'true'
     steps:
       - uses: actions/checkout@v4
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
 
       - name: Install Rust (nightly for cargo-udeps)
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: nightly
 
       - name: Setup Rust cache
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         uses: Swatinem/rust-cache@v2
         with:
           shared-key: ${{ runner.os }}
 
       - name: Install cargo-udeps
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         uses: taiki-e/install-action@cargo-udeps
 
       - name: Check for unused dependencies
-        if: needs.detect-docs-only.outputs.docs-only != 'true'
         run: |
           set -euo pipefail
           # Run with nightly; capture output without failing the step
@@ -269,6 +235,20 @@ jobs:
             exit 1
           fi
 
-      - name: Skip udeps for docs-only changes
-        if: needs.detect-docs-only.outputs.docs-only == 'true'
-        run: echo "✅ Skipping unused dependency check - only documentation changed"
+  # Single required job that depends on all others
+  # This should be the ONLY required status check in branch protection
+  all-checks-pass:
+    name: All checks pass
+    if: always()
+    needs: 
+      - test-macos
+      - test-linux
+      - clippy
+      - fmt
+      - udeps
+    runs-on: ubuntu-latest
+    steps:
+      - name: Decide whether the needed jobs succeeded or failed
+        uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
