--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["command-line-utilities", "network-programming", "development-tool
 [features]
 # Feature to enable isolated cleanup tests that should run separately in CI
 isolated-cleanup-tests = []
+profile = ["pprof", "flate2"]
 
 [dependencies]
 async-trait = "0.1"
@@ -41,6 +42,8 @@ v8 = "129"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simple-dns = "0.7"
+pprof = { version = "0.13", features = ["protobuf-codec"], optional = true }
+flate2 = { version = "1.0", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 libc = "0.2"
@@ -56,6 +59,8 @@ assert_cmd = "2.0"
 predicates = "3.0"
 serial_test = "3.0"
 ctor = "0.2"
+criterion = { version = "0.5", features = ["async_tokio"] }
+pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
 
 [package.metadata.cargo-udeps.ignore]
 dev = ["serial_test"]
@@ -65,3 +70,11 @@ inherits = "release"
 opt-level = 1
 lto = false
 codegen-units = 16
+
+[profile.bench]
+inherits = "release"
+debug = true
+
+[[bench]]
+name = "rule_engines"
+harness = false
