--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ categories = ["command-line-utilities", "network-programming", "development-tool
 [features]
 # Feature to enable isolated cleanup tests that should run separately in CI
 isolated-cleanup-tests = []
-profile = ["pprof", "flate2"]
 
 [dependencies]
 async-trait = "0.1"
@@ -42,8 +41,7 @@ v8 = "129"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simple-dns = "0.7"
-pprof = { version = "0.13", features = ["protobuf-codec"], optional = true }
-flate2 = { version = "1.0", optional = true }
+tempfile = "3.8"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 libc = "0.2"
@@ -60,6 +58,7 @@ predicates = "3.0"
 serial_test = "3.0"
 ctor = "0.2"
 criterion = { version = "0.5", features = ["async_tokio"] }
+pprof = { version = "0.13", features = ["protobuf-codec", "criterion"] }
 
 [package.metadata.cargo-udeps.ignore]
 dev = ["serial_test"]
