--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,6 +2,12 @@ name: Benchmarks
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches: [main]
+    paths:
+      - 'src/rules/**'
+      - 'benches/**'
+      - '.github/workflows/benchmark.yml'
 
 jobs:
   benchmark:
