--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,10 @@ atty = "0.2"
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2"
 socket2 = "0.5"
+rtnetlink = "0.14"
+netlink-packet-route = "0.19"
+futures = "0.3"
+nix = { version = "0.29", features = ["mount", "sched"] }
 
 [dev-dependencies]
 tempfile = "3.8"
