--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simple-dns = "0.7"
 tempfile = "3.8"
+arc-swap = "1.7"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 libc = "0.2"
