CI: Fix cargo caching in docs build and update deprecated macOS runner
- Add Swatinem/rust-cache@v2 to docs.yml build step to properly cache
  cargo dependencies and build artifacts
- Update release.yml to use macos-latest-large instead of deprecated
  macos-13-large for x86_64-apple-darwin builds

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
             os: ubuntu-latest-16-cores
             name: linux-aarch64
           - target: x86_64-apple-darwin
-            os: macos-13-large
+            os: macos-latest-large
             name: macos-x86_64
           - target: aarch64-apple-darwin
             os: macos-14-xlarge
